[package]

name = "gj"
version = "0.2.0"
authors = [ "David Renshaw <david@sandstorm.io>" ]
license = "MIT"
description = "Event loop and promises."
repository = "https://github.com/dwrensha/gj"
documentation = "https://docs.capnproto-rust.org/gj/"

readme = "README.md"

keywords = ["promise", "async", "event"]
